--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 			<version>2.5.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
 
 
 	</dependencies>
